# Basic-RayTracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
objects/: hit_record.h  hittable.h  hittable_list.h  ray.h  sphere.h  vec3.h
objects/materials/: dielectric.h  lambertian.h  material.h  metal.h
render/: camera.h
utilities/: base.h  color.h  interval.h
